test/parse-error/missing-semicolon.nrm
type a = text;
type b = a
type c = b;
